@@ -6,6 +6,12 @@
 
 2018-06-28  Chris Dumez  <cdumez@apple.com>
 
+        Unreviewed attempt to fix Win Cairo build after r233310.
+
+        * UIProcess/WebResourceLoadStatisticsStore.h:
+
+2018-06-28  Chris Dumez  <cdumez@apple.com>
+
         Split memory store logic out of WebResourceLoadStatisticsStore to clarify threading model
         https://bugs.webkit.org/show_bug.cgi?id=187055
         <rdar://problem/41584026>
